# hardware_comms

./: LICENSE  README.md  pyproject.toml
src/hardware_comms/: device.py  devices.py
src/hardware_comms/linear_motors/: kinesis.py  linear_motor.py
src/hardware_comms/spectrometers/: ocean.py  spectrometer.py  stellarnet.py  yokogawa.py
test/: test_spectrometer.py
